--- a/kube/deployment.yaml
+++ b/kube/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: albionmarket-frontend
+  namespace: albionmarket
 spec:
   minReadySeconds: 10
   strategy:
