--- a/kube/ingress.yaml
+++ b/kube/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: albionmarket-frontend
+  namespace: albionmarket
   annotations:
     kubernetes.io/ingress.class: "traefik"
 spec:
