--- a/kube/service.yaml
+++ b/kube/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: albionmarket-frontend
+  namespace: albionmarket
 spec:
   ports:
     - name: http
