--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "vue": "^2.1.10",
-    "vuex": "^2.1.1",
     "vue-analytics": "^4.1.0",
-    "vue-router": "^2.4.0"
+    "vue-router": "^2.4.0",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
